--- a/coltermay.com/sass/_responsive.scss
+++ b/coltermay.com/sass/_responsive.scss
@@ -398,6 +398,19 @@
 
 @media screen and (max-width: $bp-small) {
     //SLIDER 
+    .slide .slide__content {
+        bottom: -300px;
+        left: 0; 
+        width: 100%;
+
+        
+    }
+ 
+    .slide.current .slide__content {
+        transform: translateY(-300px);
+        padding-left: 30px;
+    }
+
     .slide:nth-child(3) {
         background-position: center right 30%;
     }
@@ -453,16 +466,6 @@
 
     .heading__secondary {
         padding: 0px 0 30px 49px;
-    }
-
-    .slide .slide__content {
-        bottom: -300px;
-        left: 0;
-        width: 100%;
-    }
-
-    .slide.current .slide__content {
-        transform: translateY(-300px);
     }
 
     .cover__line {
@@ -594,9 +597,7 @@
         width: 90%;
         margin: auto;
     }
-    // .breaker {
-    //     background-attachment: fixed !important;
-    // }
+   
 
 }
 
