--- a/coltermay.com/sass/_gallery.scss
+++ b/coltermay.com/sass/_gallery.scss
@@ -71,8 +71,6 @@
     letter-spacing: .4px;
     text-align: left;
     width: 35%;
-    // margin: auto;
-
   }
 }
 
@@ -115,29 +113,10 @@
   @include linkSettings;
   z-index: 2;
 
- 
-
   &:hover {
     opacity: 1;
   }
 }
-
-/* Responsive layout - makes a two.gallery__content-layout instead of four.gallery__contents */
-// @media screen and (max-width: 800px) {
-//   .gallery__content {
-//     flex: 50%;
-//     max-width: 50%;
-//   }
-// }
-
-/* Responsive layout - makes the two.gallery__contents stack on top of each other instead of next to each other */
-// @media screen and (max-width: 600px) {
-//   .gallery__content {
-//     flex: 100%;
-//     max-width: 100%;
-//   }
-// }
-
 
 .long-horizontal {
   @include modalContent;
@@ -184,3 +163,20 @@
   height: 64px;
   background-color: $color-black;
 }
+
+//GALLERY GRID
+/* Responsive layout - makes a two.gallery__content-layout instead of four.gallery__contents */
+// @media screen and (max-width: 800px) {
+//   .gallery__content {
+//     flex: 50%;
+//     max-width: 50%;
+//   }
+// }
+
+/* Responsive layout - makes the two.gallery__contents stack on top of each other instead of next to each other */
+// @media screen and (max-width: 600px) {
+//   .gallery__content {
+//     flex: 100%;
+//     max-width: 100%;
+//   }
+// }
