--- a/coltermay.com/sass/_base.scss
+++ b/coltermay.com/sass/_base.scss
@@ -1,7 +1,3 @@
-// * { 
-//     outline: 1px red solid !important; 
-//     visibility: visible !important 
-// }
 
 * {
     margin: 0;
@@ -23,8 +19,7 @@ body {
     width: 100%;
     padding: 20px;
     background: $color-white2;
-    text-align: center;
-    
+    text-align: center;   
 }
 
 
@@ -44,7 +39,11 @@ body {
 .black {color:$color-black;}
 .white {color: $color-white2;}
 
-
+//outlines all the elements and make them visible. This is use to debug any overfloads
+// * { 
+//     outline: 1px red solid !important; 
+//     visibility: visible !important 
+// }
 
 
 
