--- a/coltermay.com/sass/_contact.scss
+++ b/coltermay.com/sass/_contact.scss
@@ -4,13 +4,11 @@
 }
 
 .contact__box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   @include flexCenter;
     min-height: 100vh;
 }
 
-.contact__container { //container
+.contact__container { 
     position: relative;
     min-width: 1100px;
     min-height: 550px;
@@ -18,7 +16,7 @@
     flex-direction: column-reverse;
     z-index: 1;
 
-    & .contact__form {  //contactForm
+    & .contact__form { 
         position: absolute;
         padding: 70px 50px;
         margin-left: 150px;
@@ -27,7 +25,6 @@
         height: 100%;
         background: $color-white2;
         box-shadow: 0 50px 50px rgba(0, 0, 0, 0.25);
-    
     }
 }
 
@@ -59,7 +56,6 @@
         transition: .3s;
     }
 
-
     & li {
         list-style: none;
         margin-right: 15px;
@@ -90,7 +86,6 @@
         cursor: pointer;
         align-items: flex-start;
     }
-
 
     & span:nth-child(1) {
         width: 30px;
@@ -160,7 +155,6 @@
         color: $color-grey-dark;
         transition: 0.5s;
         pointer-events: none;
-
     }
 
     & textarea:focus~label,
