--- a/coltermay.com/sass/_slider.scss
+++ b/coltermay.com/sass/_slider.scss
@@ -3,8 +3,7 @@
     overflow: hidden;
     height: 100vh;
     width: 100vw;
-    z-index: -8;
-    
+    z-index: -8; 
 }
 
 .slide {
@@ -48,7 +47,6 @@
         transition: all 0.7s ease-in-out 0.9s;
     }
 
-
     // ========== HOME PAGE SILDER PICTURES ==========
     &:first-child {     //picture 1
         background: url(../img/chita-min.jpg) no-repeat center center/cover;
@@ -74,6 +72,7 @@
 
     }
 
+    //slider arrow buttons
     &__buttons button {
         border: 2px solid $color-primary;
         background-color: transparent;
@@ -89,7 +88,6 @@
             background-color: $color-white;
             color: #333;
         }
-
     }
 
     &__buttons button#next {
@@ -104,15 +102,3 @@
         left: 15px;
     }
 }
-
-// @media(max-width: 500px) {
-//     .slide .slide__content {
-//         bottom: -300px;
-//         left: 0;
-//         width: 100%;
-//     }
-
-//     .slide.current .slide__content {
-//         transform: translateY(-300px);
-//     }
-// }
