added coltermay project

--- a/jaimewebdev.com/sass/_typography.scss
+++ b/jaimewebdev.com/sass/_typography.scss
@@ -162,6 +162,6 @@
   color: $color-omnifood;
 }
 
-.portfolio-color {
-  color: $color-portfolio;
+.coltermay-color {
+  color: $color-coltermay;
 }
