--- a/jaimewebdev.com/sass/_variables.scss
+++ b/jaimewebdev.com/sass/_variables.scss
@@ -17,7 +17,7 @@ $color-trillo:#eb2f64;
 $color-netours: rgba(40, 180, 133, 0.8);
 $color-nexter: #c69963;
 $color-vesco: #34c6d3;
-$color-portfolio: #00ADDA;
+$color-coltermay: #ffd880;
 $color-omnifood: #e67e22;
 
 //====== ICON COLORS ======
