--- a/coltermay.com/css/style.concat.css
+++ b/coltermay.com/css/style.concat.css
@@ -3531,6 +3531,14 @@ body {
   height: 12px;
   z-index: 99; }
 
+.menu__btn {
+  position: absolute;
+  top: 20px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: .8em;
+  letter-spacing: 1px; }
+
 span.one {
   position: absolute;
   width: 40px;
